--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <!-- Header  -->
-    <header>
+    <header class="container">
+      <!-- Navbar  Start -->
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
           <button
@@ -52,6 +53,109 @@
           </div>
         </div>
       </nav>
+      <!-- Navbar End -->
+
+      <!-- Slider Start  -->
+
+      <section class="mt-5">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active bg-info border rounded p-5">
+              <div class="row">
+                <div class="col-lg-7 d-flex align-items-center">
+                  <div>
+                    <h2>Cool Dude Headphone</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Similique ex aperiam exercitationem ab quidem accusamus
+                      voluptatibus fuga illo cupiditate labore.
+                    </p>
+                    <h1>$420</h1>
+                    <div class="btn btn-warning">Buy Now</div>
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/headphone.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item active bg-info border rounded p-5">
+              <div class="row">
+                <div class="col-lg-7 d-flex align-items-center">
+                  <div>
+                    <h2>Cool Dude TV</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Similique ex aperiam exercitationem ab quidem accusamus
+                      voluptatibus fuga illo cupiditate labore.
+                    </p>
+                    <h1>$420</h1>
+                    <div class="btn btn-warning">Buy Now</div>
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/tv.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item active bg-info border rounded p-5">
+              <div class="row">
+                <div class="col-lg-7 d-flex align-items-center">
+                  <div>
+                    <h2>Cool Dude X-box</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Similique ex aperiam exercitationem ab quidem accusamus
+                      voluptatibus fuga illo cupiditate labore.
+                    </p>
+                    <h1>$420</h1>
+                    <div class="btn btn-warning">Buy Now</div>
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/xbox.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+
+      <!-- Slider End  -->
     </header>
 
     <script
