--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header  -->
     <header class="container">
       <!-- Navbar  Start -->
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg fixed-top bg-light">
         <div class="container">
           <button
             class="navbar-toggler"
@@ -41,13 +41,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Backpack</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#subscribe">Subscribe</a>
               </li>
             </ul>
           </div>
@@ -196,7 +196,7 @@
       <!-- Categories End -->
 
       <!-- Shoes Section start  -->
-      <section class="container my-5">
+      <section class="container my-5" id="shoes">
         <h2>Shoes</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
@@ -263,11 +263,10 @@
           </div>
         </div>
       </section>
-
       <!-- Shoes Section end  -->
 
       <!-- Backpack section start  -->
-      <section class="container my-5">
+      <section class="container my-5" id="backpack">
         <h2>Backpack</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
@@ -323,7 +322,39 @@
         </div>
       </section>
       <!-- Backpack section end  -->
+
+      <!-- subscribe start  -->
+      <section
+        style="height: 300px"
+        class="container rounded-3 bg-info d-flex justify-content-center align-items-center"
+        id="subscribe"
+      >
+        <div>
+          <h2>Lets Stay in touch</h2>
+          <p>Get updates on sales specials and more</p>
+          <form>
+            <div class="mb-3">
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </section>
+      <!-- subscribe end  -->
     </main>
+    <footer class="my-5 text-center">
+      <p>
+        <small
+          >2023. Panda Commerce. All right reserved. Sofia, Bulgaria.</small
+        >
+      </p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
