--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- Header  -->
@@ -64,7 +66,7 @@
           data-bs-ride="carousel"
         >
           <div class="carousel-inner">
-            <div class="carousel-item active bg-info border rounded p-5">
+            <div class="carousel-item active panda-bg-info border rounded p-5">
               <div class="row">
                 <div class="col-lg-7 d-flex align-items-center">
                   <div>
@@ -87,7 +89,7 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item active bg-info border rounded p-5">
+            <div class="carousel-item active panda-bg-info border rounded p-5">
               <div class="row">
                 <div class="col-lg-7 d-flex align-items-center">
                   <div>
@@ -110,7 +112,7 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item active bg-info border rounded p-5">
+            <div class="carousel-item active panda-bg-info border rounded p-5">
               <div class="row">
                 <div class="col-lg-7 d-flex align-items-center">
                   <div>
@@ -326,7 +328,7 @@
       <!-- subscribe start  -->
       <section
         style="height: 300px"
-        class="container rounded-3 bg-info d-flex justify-content-center align-items-center"
+        class="container rounded-3 panda-bg-info d-flex justify-content-center align-items-center"
         id="subscribe"
       >
         <div>
